--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         }
     ],
     "require": {
-        "php" : ">=7.1.0"
+        "php" : ">=5.5.0",
+        "ext-curl": "*"
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.0",
